--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -19,7 +19,7 @@
         </ul>
         <ul class="right">
           <li><a href="/about">About</a></li>
-          <li><a href="/finches">Finch List</a></li>
+          <li><a href="/finches">All Finches</a></li>
         </ul>
       </div>
     </nav>
