--- a/main_app/templates/finches/index.html
+++ b/main_app/templates/finches/index.html
@@ -5,17 +5,19 @@
 
 {% for finch in finches %}
 <div class="card">
+  <a href="{% url 'detail' finch.id %}">
     <div class="card-content">
       <span class="card-title">{{ finch.name }}</span>
       <p>Species: {{ finch.species }}</p>
       <p>Description: {{ finch.description }}</p>
       {% if finch.age > 0 %}
-        <p>Age: {{ finch.age }}</p>
+      <p>Age: {{ finch.age }}</p>
       {% else %}
-        <p>Age: Nestling</p>
+      <p>Age: Nestling</p>
       {% endif %}
     </div>
-  </div>
+  </a>
+</div>
 {% endfor %}
 
 {% endblock %}
